#ifndef __mm_basic_frame_entry_udp_hd_h__
#define __mm_basic_frame_entry_udp_hd_h__

#include "core/mm_prefix.h"

#include "core/mm_core.h"

//////////////////////////////////////////////////////////////////////////
extern void c_basic_frame_entry_knock_rq( void* obj, void* u, struct mm_packet* rq_pack, struct mm_sockaddr* remote );
//////////////////////////////////////////////////////////////////////////
#include "core/mm_suffix.h"

#endif//__mm_basic_frame_entry_udp_hd_h__